test/tests/bad/inf-type.carth
;; InfType

(defun infinite-type [x] (infinite-type x infinite-type))
